# ShmupThing

./: CMakeLists.txt  README.md  meson.build
Assets/: 2delemarraygeometry.glsl  2delemarrayvertex.glsl  2delemfragment.glsl  2delemgeometry.glsl  2delemvertex.glsl  anim.fbx  defaultFragment.glsl  defaultVertex.glsl  enemy.fbx  fontMultilineGeometry.glsl  fragment.glsl  models.txt  particlesGeometry.glsl  particlesVertex.glsl  ship.fbx  sounds.txt  textFragment.glsl  textGeometry.glsl  vertex.glsl
Source/: AudioSystem.cpp  AudioSystem.h  Cursor.cpp  Cursor.h  Dragon_SDLGL.cpp  Dragon_SDLGL.h  Enemy.h  EnemyManager.cpp  EnemyManager.h  EnemySpawner.cpp  EnemySpawner.h  EventTypes.h  GL2DElement.cpp  GL2DElement.h  GL2DElementArray.cpp  GL2DElementArray.h  GLCamera.cpp  GLCamera.h  GLModelManager.h  GLMultilineText.h  GLProgramManager.cpp  GLProgramManager.h  GLProjectileRenderer.cpp  GLProjectileRenderer.h  GLText.cpp  GLText.h  GLTextRenderer.h  GL_Model.cpp  GL_Model.h  GL_ProgramManager.cpp  GL_ProgramManager.h  GL_Texture.cpp  GL_Texture.h  GUIButton.cpp  GUIButton.h  GUICheckBox.cpp  GUICheckBox.h  GUIElement.cpp  GUIElement.h  GUISystem.cpp  (+24 more)
backup/: CMakeLists.txt
backup/Assets/: 2delemarrayfragment.glsl  defaultFragment.glsl  defaultVertex.glsl  fontMultilineFragment.glsl  fontMultilineVertex.glsl  models.txt  particlesFragment.glsl  particlesGeometry.glsl  particlesVertex.glsl  skinnedarm.mtl  sounds.txt  textVertex.glsl
backup/Source/: AudioSystem.cpp  AudioSystem.h  Cursor.cpp  Cursor.h  Enemy.cpp  GLMultilineText.cpp  GLMultilineText.h  GLText.h  GLTexture.cpp  GUIButton.cpp  GUIButton.h  GUICheckBox.cpp  GUICheckBox.h  GUISystem.cpp  Game.cpp  Game.h  Input.h  Light.cpp  Light.h  Projectile.cpp  collision.cpp  main.cpp  sdl_gl_window.h
headers/: Enemy.h  EnemyManager.h  GL2DElement.h  GLModel.h  GLModelManager.h  GLProjectileRenderer.h  GLTexture.h  Game.h  GameEvent.h  Input.h  Particles.h  Player.h  Projectile.h  collision.h  enemy_manager.h  game.h  gl_2d_element.h  gl_2d_element_array.h  gl_light.h  gl_model.h  gl_model_manager.h  gl_particles.h  gl_program_manager.h  gl_projectile.h  gl_projectile_renderer.h  gl_texture.h  glm_camera.h  sdl_gl_window.h  sdl_input.h  ship.h
source/: Enemy.cpp  Enemy.h  EnemyManager.cpp  GL2DElement.cpp  GL2DElement.h  GL2DElementArray.cpp  GL2DElementArray.h  GLCamera.cpp  GLCamera.h  GLModel.cpp  GLModelManager.cpp  GLProgramManager.cpp  GLProjectileRenderer.cpp  GLProjectileRenderer.h  GLTexture.cpp  Game.cpp  Input.cpp  Light.cpp  Particles.cpp  Particles.h  Player.cpp  Projectile.cpp  Projectile.h  collision.cpp  collision.h  enemy.cpp  enemy_manager.cpp  game.cpp  gl_2d_element.cpp  gl_2d_element_array.cpp  gl_light.cpp  gl_model.cpp  gl_model_manager.cpp  gl_particles.cpp  gl_program_manager.cpp  gl_projectile.cpp  gl_projectile_renderer.cpp  gl_texture.cpp  glm_camera.cpp  main.cpp  (+5 more)
